<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>linkx_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for linkx_soem_demo launch/config</description>
  <maintainer email="pzx@todo.todo">pzx</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>linkx_soem_demo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
